# learn_WebAssembly_with_rust_book

greet/: Cargo.toml
greet-user/: Cargo.toml
greet-user/src/: main.rs
greet/src/: bindings.rs  lib.rs
greet/wit/: world.wit
hello/: hello.wat
hello-wasi-cli/: Cargo.toml
hello-wasi-cli/src/: main.rs
my-grep/: Cargo.toml
my-grep/src/: main.rs
